Visualisasi Informasi Online Retail V1

--- a/index.html
+++ b/index.html
@@ -13101,8 +13101,8 @@ div#notebook {
 <p><strong>Link Ipnyb:</strong> <a href="https://github.com/Evann888/Evann888.github.io">https://github.com/Evann888/Evann888.github.io</a></p>
 <p><strong>Size:</strong>  541910 rows x 8 columns</p>
 <p><strong>Oleh:</strong> Evan (05211640000114)</p>
-<p>Overview:
-Dataset ini berisi mengenai data transaksional yang terjadi antara Desember 2010 hingga Desember 2011 untuk retail online yang berbasis di UK. Perusahaan menjual suvenir hadiah yang unik. Kustomer dari perusahaan banyak yang berupa wholesaler.</p>
+<p><strong>Overview:</strong></p>
+<p>Dataset ini berisi mengenai data transaksional yang terjadi antara Desember 2010 hingga Desember 2011 untuk retail online yang berbasis di UK. Perusahaan menjual suvenir hadiah yang unik. Kustomer dari perusahaan banyak yang berupa wholesaler.</p>
 
 </div>
 </div>
